@@ -19,35 +19,50 @@
    <img src="-/img/mmior.jpg" />
    <div class="indented">
   
-  <table >
+  <table>
   <tbody>
-    <tr> 
-	    <td>
-	    <form name="testForm" method="post" action="/ont/?sparql">
-	    	Your SPARQL query:<br>
-		<textarea rows="12" cols="110" name="sparql"></textarea>
-	    	<input value="Submit" type="submit">
-	    </form>
-	</td>
+        <tr>
+        <td>
+            <form name="testForm" method="post" action="/ont/?sparql">
+                <table>
+                <tbody>
+                        <tr> <td> Your SPARQL query: </td> </tr>
+                        <tr> <td colspan="2">
+                                <textarea rows="12" cols="110" name="sparql"></textarea>
+                                <br/>
+                                <input name="form" type="hidden" value="html">
+                        </td>
+                        </tr>
+                        <tr>
+                        <td> Inference: <input name="infer" type="checkbox" value="true">
+                        <font color="gray">&nbsp;&nbsp;Note: query processing may take significantly longer if inference is enabled.</font>
+                        </td>
+                        <td align="right"> <input value="Submit" type="submit"> </td>
+                        </tr>
+                        <tr>
+                </tbody>
+                </table>
+            </form>
+        </td>
 
-	<td>
-	<a href="http://www.w3.org/TR/rdf-sparql-query/">SPARQL</a> 
-	(<b>S</b>imple <b>P</b>rotocol and <b>R</b>DF <b>Q</b>uery <b>L</b>anguage) is the 
-	 standard query language for 
-	<a href="http://www.w3.org/RDF">RDF</a> (Resource Description Framework). 
-	More information <a href="http://en.wikipedia.org/wiki/SPARQL">here</a>.
+        <td>
+        <a href="http://www.w3.org/TR/rdf-sparql-query/">SPARQL</a>
+        (<b>S</b>imple <b>P</b>rotocol and <b>R</b>DF <b>Q</b>uery <b>L</b>anguage) is the
+         standard query language for
+        <a href="http://www.w3.org/RDF">RDF</a> (Resource Description Framework).
+        More information <a href="http://en.wikipedia.org/wiki/SPARQL">here</a>.
 
-	<br/>
-	Use this form to submit your SPARQL query against the 
-	<a href="http://mmisw.org/or">MMI Ontology Registry and Respository</a>. 
-	
-	<br/>
-	Both GET and POST methods are accepted.
-	
-	</td>
+        You can use this form to submit your SPARQL query against the
+        <a href="http://mmisw.org/orr">MMI Ontology Registry and Respository</a>.
+
+        <br/>
+        Both GET and POST methods are accepted.
+
+        </td>
   </tr>
  </tbody>
- </table>  
+ </table>
+
 
 <br/>
 <table class="inline">
@@ -147,10 +162,19 @@ WHERE { ?class rdf:type owl:Class .
 </tbody></table>
 
 <br/>
-Note: The default output format for SELECT queries is HTML. 
-To obtain a CSV output format, add the "form" parameter with value "csv" in your GET or
-POST request, for example: <br/>
+Note: The default output format for SELECT queries is HTML.
+To obtain an output in other format, add the "form" parameter in your GET or POST request, for example:
+<ul>
+<li>
+<a href="/ont/?form=json&sparql=SELECT++%3Fs+%3Fp+%3Fo+WHERE+{%3Fs+%3Fp+%3Fo.+}+LIMIT+20%0D%0A">http://mmisw.org/ont/?form=json&sparql=SELECT ?s ?p ?o WHERE {?s ?p ?o. } LIMIT 20</a>.
+</li>
+<li>
 <a href="/ont/?form=csv&sparql=SELECT++%3Fs+%3Fp+%3Fo+WHERE+{%3Fs+%3Fp+%3Fo.+}+LIMIT+20%0D%0A">http://mmisw.org/ont/?form=csv&sparql=SELECT ?s ?p ?o WHERE {?s ?p ?o. } LIMIT 20</a>.
+</li>
+<li>
+<a href="/ont/?form=html&sparql=SELECT++%3Fs+%3Fp+%3Fo+WHERE+{%3Fs+%3Fp+%3Fo.+}+LIMIT+20%0D%0A">http://mmisw.org/ont/?form=html&sparql=SELECT ?s ?p ?o WHERE {?s ?p ?o. } LIMIT 20</a>.
+</li>
+<ul>
 
 
   </div>
